--- a/RetroScrap3000.csproj
+++ b/RetroScrap3000.csproj
@@ -42,6 +42,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="config/retroscrap.bin">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Link>Config/retroscrap.bin</Link>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.2.3" />
     <PackageReference Include="Avalonia.Desktop" Version="11.2.3" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.3" />
